--- a/src/styles/components/_coinChart.scss
+++ b/src/styles/components/_coinChart.scss
@@ -1,3 +1,5 @@
+@use "../settings.module" as var;
+
 .chart-container {
   position: absolute;
   z-index: 1000;
@@ -44,11 +46,11 @@
         justify-content: center;
 
         &.active-btn {
-          background: $color1;
+          background: var.$color1;
           padding: 2px 4px;
         }
         &:hover {
-          background: $color1;
+          background: var.$color1;
         }
       }
     }
@@ -57,11 +59,11 @@
       margin-left: -105px;
 
       text {
-        fill: $white1;
+        fill: var.$white1;
         font-size: 0.9rem;
       }
       .recharts-tooltip-wrapper {
-        color: $color1;
+        color: var.$color1;
         border-radius: 10px;
         overflow: hidden;
 
@@ -74,7 +76,7 @@
 
           .recharts-tooltip-item-value,
           .recharts-tooltip-item-name {
-            color: $black1 !important;
+            color: var.$black1 !important;
           }
         }
       }
