--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -70,6 +70,9 @@ header {
         @media screen and (max-width: 1150px) {
           transform: translateY(-6px);
         }
+        @media screen and (max-width: 425px) {
+          font-size: 1rem;
+        }
 
         img {
           height: 17px;
